@@ -7,32 +7,32 @@ import java.util.function.Supplier;
 import java.util.stream.Collectors;
 import java.util.stream.LongStream;
 
+import static java.lang.System.currentTimeMillis;
+import static java.lang.System.out;
+
 public class StreamPerformanceExample1 {
     static long tokenCount = 50000;
 
     public static void main(String[] args) {
         int loop = 20;
-        long result = measurePerformance(StreamPerformanceExample1
-                ::sortSequentialStream, loop);
-        System.out.println("Time taken to process sort in sequential: " + result + " msecs");
+        long result = measurePerformance(StreamPerformanceExample1::sortSequentialStream, loop);
+        out.println("Time taken to process sort in sequential: " + result + " msecs");
         result = measurePerformance(StreamPerformanceExample1::sortParallelStream, loop);
-        System.out.println("Time taken to process sort in parallel: " + result + "msecs");
+        out.println("Time taken to process sort in parallel: " + result + " msecs");
 
     }
 
     public static long measurePerformance(Supplier<Long> supplier, int numberofTimes) {
-        long startTime = System.currentTimeMillis();
+        long startTime = currentTimeMillis();
         for (int i = 0; i < numberofTimes; i++)
             supplier.get();
-        return System.currentTimeMillis() - startTime;
+        return currentTimeMillis() - startTime;
     }
 
     public static long sortSequentialStream() {
         List<RandomTokens> randomTokens = LongStream.rangeClosed(0, tokenCount)
-                .mapToObj((i) -> {
-                    return new RandomTokens(i, ThreadLocalRandom.current()
-                            .nextLong(tokenCount));
-                }).collect(Collectors.toList());
+                .mapToObj(i -> new RandomTokens(i, ThreadLocalRandom.current().nextLong(tokenCount)))
+                .toList();
         randomTokens.stream().sorted(Comparator.comparing(RandomTokens::getTokens));
         return -1;
 
@@ -40,10 +40,9 @@ public class StreamPerformanceExample1 {
 
     public static long sortParallelStream() {
         List<RandomTokens> randomTokens = LongStream.rangeClosed(0, tokenCount)
-                .parallel().mapToObj((i) -> {
-                    return new RandomTokens(i, ThreadLocalRandom.current()
-                            .nextLong(tokenCount));
-                }).collect(Collectors.toList());
+                .parallel()
+                .mapToObj(i -> new RandomTokens(i, ThreadLocalRandom.current().nextLong(tokenCount)))
+                .toList();
         randomTokens.stream().parallel().sorted(Comparator.comparing(RandomTokens::getTokens));
         return -1;
     }
